move script to head element

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta charset="utf-8" /><title>litlighilit's home</title></head><body><p><h1>Welcome</h1><sup>to <i>litlighilit</i>'s<ins> home</ins></sup></p><p><script type="module" src="https://md-block.verou.me/md-block.js"></script><md-block>
+<html><head><meta charset="utf-8" /><title>litlighilit's home</title><script type="module" src="https://md-block.verou.me/md-block.js"></script></head><body><p><h1>Welcome</h1><sup>to <i>litlighilit</i>'s<ins> home</ins></sup></p><p><md-block>
 While had explored quite a few langs, like
 C/C++, Rust, Haskell, Smalltalk, etc,
 
