--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta charset="utf-8" /><title>litlighilit's home</title><script type="module">// code from https://github.com/LeaVerou/md-block v0.0.1
+<html><head><meta charset="utf-8" /><title>litlighilit's home</title><link rel="shortcut icon" href="lit.ico" /><script type="module">// code from https://github.com/LeaVerou/md-block v0.0.1
 /*
 MIT License
 
